syntax = "proto3";
option go_package = "github.com/frimin/1pactus-react/backend/proto/api";
package api;

message NetworkStatusData {
    uint32 time_index = 1;
    int64 stake = 2;
    int64 supply = 3;
    int64 circulating_supply = 4;
    int64 txs = 5;
    int64 blocks = 6;
    int64 fee = 7;
    int64 active_validator = 8;
    int64 active_account = 9;
}

message GetNetworkHealthRequest {
    int64 day = 1; 
}

message GetNetworkHealthResponse {
    repeated NetworkStatusData lines = 1;
}